--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,18 @@
 spring.application.name=Booktopia
+
+
+logging.level.root=INFO
+logging.level.org.hibernate=DEBUG
+logging.level.org.springframework=DEBUG
+
+spring.datasource.url=jdbc:oracle:thin:@fullstack3_low?TNS_ADMIN=/home/ecodisonante/Documentos/DUOC/Wallet_FullStack3
+spring.datasource.username=ADMIN
+spring.datasource.password=ipsc!95d!hxgfnL
+spring.datasource.driver-class-name=oracle.jdbc.driver.OracleDriver
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.OracleDialect
+
+spring.jpa.hibernate.ddl-auto=update 
+spring.jpa.show-sql=true
+
+spring.datasource.hikari.maximum-pool-size= 10
+spring.datasource.hikari.connection-timeout= 30000
