--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,9 +5,9 @@ logging.level.root=INFO
 logging.level.org.hibernate=DEBUG
 logging.level.org.springframework=DEBUG
 
-spring.datasource.url=jdbc:oracle:thin:@fullstack3_low?TNS_ADMIN=/home/ecodisonante/Documentos/DUOC/Wallet_FullStack3
-spring.datasource.username=ADMIN
-spring.datasource.password=ipsc!95d!hxgfnL
+spring.datasource.url=jdbc:oracle:thin:@fullstack3_low?TNS_ADMIN=./wallet
+spring.datasource.username=BOOKTOPIA_USR
+spring.datasource.password=Sf3Bo0kt0p14
 spring.datasource.driver-class-name=oracle.jdbc.driver.OracleDriver
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.OracleDialect
 
