--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,7 +5,7 @@ logging.level.root=INFO
 logging.level.org.hibernate=DEBUG
 logging.level.org.springframework=DEBUG
 
-spring.datasource.url=jdbc:oracle:thin:@fullstack3_low?TNS_ADMIN=./wallet
+spring.datasource.url=jdbc:oracle:thin:@fullstack3_low?TNS_ADMIN=/app/wallet
 spring.datasource.username=BOOKTOPIA_USR
 spring.datasource.password=Sf3Bo0kt0p14
 spring.datasource.driver-class-name=oracle.jdbc.driver.OracleDriver
